@@ -1,11 +1,11 @@
 package com.service_your_desk.service_your_desk_backend.service;
 
 import org.springframework.stereotype.Service;
-
 import com.service_your_desk.service_your_desk_backend.model.ServiceIssue;
 import com.service_your_desk.service_your_desk_backend.repository.ServiceIssueRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ServiceIssueService {
@@ -16,16 +16,15 @@ public class ServiceIssueService {
         this.repository = repository;
     }
 
-    public List<String> getAllServices() {
+    // Get all unique service names from ServiceEntity
+    public List<ServiceIssue> getAllServicesIssues() {
+        return repository.findAll();
+    }
+    // Get issues by service name
+    public List<ServiceIssue> getIssuesByService(String serviceName) {
         return repository.findAll()
                 .stream()
-                .map(ServiceIssue::getServiceName)
-                .distinct()
-                .toList();
-    }
-
-    public List<ServiceIssue> getIssuesByService(String serviceName) {
-        return repository.findByServiceName(serviceName);
+                .filter(issue -> issue.getService().getName().equalsIgnoreCase(serviceName))
+                .collect(Collectors.toList());
     }
 }
-
